--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "barryvdh/laravel-ide-helper": "^2.2",
         "laravelcollective/html": "5.3.*",
         "maatwebsite/excel": "~2.1.0",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "spatie/laravel-backup": "3.0.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
